# TgBot_api

./: Cargo.toml
src/: bot_methods.rs  callback_bot.rs  lib.rs  longpull_bot.rs  telegram_bot_methods.rs  telegram_longpull_bot.rs
src/types/: chat.rs  inline_keyboard.rs  message.rs  mod.rs  update.rs
src/update/: chat.rs  message.rs  mod.rs
