[package]
name = "TgBot_api"
version = "0.1.0"
edition = "2021"

#[lib]
#name="telegram_bot"
#crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.89" }
futures = "0.3.25"
serde = { version = "1.0.147" }
serde_derive = "1.0.147"
url = "2.3.1"
async-trait = "0.1.58"