[package]
name = "TgBot_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { features = ["json"] }
tokio = {features = ["full"] }
serde_json = {}
#futures = "0.3.25"
serde = {}
serde_derive = {}
url = "2.3.1"
async-trait = "0.1.58"
