[package]
name = "TgBot_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"]}
tokio = {version = "1.24.1", features = ["full"]}
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
url = "2.3.1"
async-trait = "0.1.58"
